[package]
name = "turtle"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bincode = "2.0.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing-subscriber = "0.3.19"
